--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 
 <body>
   <header id="header">
-    <h1>TECH</h1>
+    <a href="./index.html"><h1>TECH</h1></a>
       <nav>
         <ul>
-          <li>ホーム</li>
-          <li>事業内容</li>
-          <li>ニュース</li>
-          <li>社員ブログ</li>
-          <li>会社概要</li>
-          <li>採用情報</li>
-          <li>お問い合わせ</li>
+          <a href="./index.html"><li>ホーム</li></a>
+          <a href="./service.html"><li>事業内容</li></a>
+          <a href="./news.html"><li>ニュース</li></a>
+          <a href="./blog.html"><li>社員ブログ</li></a>
+          <a href="./company.html"><li>会社概要</li></a>
+          <a href="./recruit.html"><li>採用情報</li></a>
+          <a href="./contact.html"><li>お問い合わせ</li></a>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="hamburger1"></span>
+        <span class="hamburger2"></span>
+        <span class="hamburger3"></span>
+      </div>
   </header>
-
 
   <div id="mission">
     <div class="mission-text">
@@ -72,61 +76,61 @@
         </div>
       </div>
     </div>
-    <button>サービス一覧をみる</button>
+    <a href="./service.html"><button>サービス一覧をみる</button></a>
   </div>
 
 <div id="news">
   <div class="news-text">
    <div class="news-title">
      <h1>ニュース</h1>
-     <button>ニュース一覧をみる</button>
+     <a href="./news.html"><button>ニュース一覧をみる</button></a>
    </div>
-   <div class="news-first">
+   <a href="./index.html"><div class="news-first">
      <h3>2019/07/17
      <span>会社を創業しました。</span></h3>
-   </div>
-   <div class="news-second">
+   </div></a>
+   <a href="./index.html"><div class="news-second">
      <h3>2020/04/01<span>資金調達を行いました。</span></h3>
-   </div>
-   <div class="news-third">
+   </div></a>
+   <a href="index.html"><div class="news-third">
      <h3>2020/10/01<span>東京新聞に掲載されました。</span></h3>
-   </div>
+   </div></a>
   </div>
 </div>
 
 <div id="blog"><h1>社員ブログ</h1>
   <div class="blog-main">
     <div class="blog-first">
-      <div class="blog-first-image"></div>
+      <a href="./index.html"><div class="blog-first-image"></div></a>
       <div clss="blog-first-text">
         <h3>2019/07/17</h3>
-        <h2>会社を創業した理由</h2>
+        <a href="./index.html"><h2>会社を創業した理由</h2></a>
       </div>
     </div>
     <div class="blog-second">
-      <div class="blog-second-image"></div>
+      <a href="./index.html"><div class="blog-second-image"></div></a>
       <div class="blog-second-text">
         <h3>2019/11/11</h3>
-        <h2>ITエンジニアを育成する最強メソッド</h2>
+        <a href="./index.html"><h2>ITエンジニアを育成する最強メソッド</h2></a>
       </div>
     </div>
     <div class="blog-third">
-      <div class="blog-third-image"></div>
+      <a href="./index.html"><div class="blog-third-image"></div></a>
       <div class="blog-third-text">
         <h3>2020/08/01</h3>
-        <h2>コーチングによるモチベーション向上理論</h2>
+        <a href="./index.html"><h2>コーチングによるモチベーション向上理論</h2></a>
       </div>
     </div>
   </div>
-  <button>サービス一覧をみる</button>
+  <a href="./blog.html"><button>サービス一覧をみる</button></a>
 </div>
 
 <div id="company">
-  <div class="company-left">
-    <h1>会社概要</h1>
+  <a href="./company.html"><div class="company-left">
+    <h1>会社概要</h1></a>
   </div>
-  <div class="company-right">
-    <h1>採用情報</h1>
+  <a href="./recruit.html"><div class="company-right">
+    <h1>採用情報</h1></a>
   </div>
 </div>
 
@@ -134,7 +138,7 @@
   <div class="FAQ-text">
     <h1>お問い合わせ</h1>
     <h3>お仕事のご依頼や採用に関してはお問い合わせにて承っております。</h3>
-    <button>お問い合わせ</button>
+    <a href="./contact.html"><button>お問い合わせ</button></a>
   </div>
 </div>
 
@@ -142,16 +146,18 @@
   <h6>©2020 TECH inc.</h6>
     <nav>
       <ul>
-        <li>ホーム</li>
-        <li>事業内容</li>
-        <li>ニュース</li>
-        <li>社員ブログ</li>
-        <li>会社概要</li>
-        <li>採用情報</li>
-        <li>お問い合わせ</li>
+        <a href="./index.html"><li>ホーム</li></a>
+        <a href="./service.html"><li>事業内容</li></a>
+        <a href="./news.html"><li>ニュース</li></a>
+        <a href="./blog.html"><li>社員ブログ</li></a>
+        <a href="./company.html"><li>会社概要</li></a>
+        <a href="./recruit.html"><li>採用情報</li></a>
+        <a href="./contact.html"><li>お問い合わせ</li></a>
       </ul>
     </nav>
 </footer>
+
+
 
 </body>
 </html>
