--- a/service.html
+++ b/service.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-  <header id="header"><h1>TECH</h1>
+  <header id="header"><a href="./index.html"><h1>TECH</h1></a>
     <nav>
       <ul>
-        <li>ホーム</li>
-        <li>事業内容</li>
-        <li>ニュース</li>
-        <li>社員ブログ</li>
-        <li>会社概要</li>
-        <li>採用情報</li>
-        <li>お問い合わせ</li>
+        <a href="./index.html"><li>ホーム</li></a>
+        <a href="./service.html"><li>事業内容</li></a>
+        <a href="./news.html"><li>ニュース</li></a>
+        <a href="./blog.html"><li>社員ブログ</li></a>
+        <a href="./company.html"><li>会社概要</li></a>
+        <a href="./recruit.html"><li>採用情報</li></a>
+        <a href="./contact.html"><li>お問い合わせ</li></a>
       </ul>
     </nav>
   </header>
@@ -50,7 +50,7 @@
           <h3>経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</h3>
         </div>
       </div>
-      <div class="df">
+      <div class="fourth">
         <div class="fourth-image"></div>
         <div class="fourth-text">
           <h1>デジタルトランスフォーメーション事業</h1>
@@ -59,5 +59,31 @@
       </div>
     </div>
   </div>
+
+    <div id="FAQ">
+      <div class="FAQ-text">
+        <h1>お問い合わせ</h1>
+        <h3>お仕事のご依頼や採用に関してはお問い合わせにて承っております。</h3>
+        <a href="./contact.html"><button>お問い合わせ</button></a>
+      </div>
+    </div>
+  
+  <div id="footer">
+    <h6>©2020 TECH inc.</h6>
+    <div class="footer-menu">
+      <nav>
+        <ul>
+          <a href="./index.html"><li>ホーム</li></a>
+          <a href="./service.html"><li>事業内容</li></a>
+          <a href="./news.html"><li>ニュース</li></a>
+          <a href="./blog.html"><li>社員ブログ</li></a>
+          <a href="./company.html"><li>会社概要</li></a>
+          <a href="./recruit.html"><li>採用情報</li></a>
+          <a href="./contact.html"><li>お問い合わせ</li></a>
+        </ul>
+      </nav>
+    </div>
+  </div>
+  
 </body>
 </html>
