--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
 
 <footer id="footer">
   <h6>©2020 TECH inc.</h6>
+  <div>
     <nav>
       <ul>
         <a href="./index.html"><li>ホーム</li></a>
@@ -155,6 +156,7 @@
         <a href="./contact.html"><li>お問い合わせ</li></a>
       </ul>
     </nav>
+  </div>
 </footer>
 
 
