--- a/news.html
+++ b/news.html
@@ -22,6 +22,11 @@
       <a href="./contact.html"><li>お問い合わせ</li></a>
     </ul>
   </nav>
+  <div class="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 </header>
 
 <div id="title">
