--- a/company.html
+++ b/company.html
@@ -38,6 +38,11 @@
         </a>
       </ul>
     </nav>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
   
   <div id="title">
@@ -69,7 +74,10 @@
       </tr>
       <tr>
         <th>資本金</th>
-        <td>1000万円</td>device-width
+        <td>1000万円</td>
+      </tr>
+    </table>
+  </div>
 </div>
   
   <div id="FAQ">
