--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,11 @@
     </a>
   </ul>
 </nav>
+<div class="hamburger">
+  <span></span>
+  <span></span>
+  <span></span>
+</div>
 </header>
 
 <div id="title">
