--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,11 @@
         </a>
       </ul>
     </nav>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
   
   <div id="title">
