--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <footer id="footer">
   <h6>©2020 TECH inc.</h6>
-  <div>
+  <div class="footer-menu">
     <nav>
       <ul>
         <a href="./index.html"><li>ホーム</li></a>
